--- a/package.json
+++ b/package.json
@@ -1,12 +1,16 @@
 {
   "name": "react-realtime-chart",
   "private": true,
+  "author": {
+    "name": "Marcos Juan Botene Martins"
+  },
   "version": "0.0.0",
   "type": "module",
   "scripts": {
     "dev": "vite",
     "build": "tsc && vite build",
-    "preview": "vite preview"
+    "preview": "vite preview",
+    "pretty": "prettier --write ."
   },
   "dependencies": {
     "react": "^18.2.0",
@@ -16,6 +20,7 @@
     "@types/react": "^18.0.17",
     "@types/react-dom": "^18.0.6",
     "@vitejs/plugin-react": "^2.1.0",
+    "prettier": "^2.7.1",
     "typescript": "^4.6.4",
     "vite": "^3.1.0"
   }
